--- a/06-intro-ML-decision-trees/notebooks/decisionTree_study.ipynb
+++ b/06-intro-ML-decision-trees/notebooks/decisionTree_study.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
     "#--Define feautres weight, texture\n",
     "features = [[140, 1], [130,1], [150,0], [170,0]]\n",
     "labels = [0, 0, 1, 1]\n",
-    "print \"features do elemento 0: \"+str((features[0]))\n",
+    "print(\"features do elemento 0: {}\".format(str((features[0]))))\n",
     "#print \"label do elemento 0: \"+str((labels[0]))"
    ]
   },
@@ -780,21 +780,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
