--- a/06-intro-ML-decision-trees/notebooks/Aula 6 Tera - Decision Tree Study -Rodrigo.ipynb
+++ b/06-intro-ML-decision-trees/notebooks/Aula 6 Tera - Decision Tree Study -Rodrigo.ipynb
@@ -34,27 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 127,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.0"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#--Google Developers example\n",
     "# from sklearn import tree\n",
@@ -68,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 134,
    "metadata": {
     "scrolled": true
    },
@@ -740,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 136,
    "metadata": {
     "scrolled": false
    },
@@ -1074,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 137,
    "metadata": {
     "scrolled": false
    },
@@ -3910,7 +3892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -4130,7 +4112,7 @@
        "59          5.2         2.7          3.9         1.4       1"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4158,7 +4140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -4172,7 +4154,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4188,7 +4170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -4220,7 +4202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -4229,7 +4211,7 @@
        "array([0])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4243,7 +4225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -4252,7 +4234,7 @@
        "0.9795918367346939"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4295,105 +4277,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 143,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-- iris.csv found locally\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SepalLength</th>\n",
-       "      <th>SepalWidth</th>\n",
-       "      <th>PetalLength</th>\n",
-       "      <th>PetalWidth</th>\n",
-       "      <th>Name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>Iris-setosa</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   SepalLength  SepalWidth  PetalLength  PetalWidth         Name\n",
-       "0          5.1         3.5          1.4         0.2  Iris-setosa\n",
-       "1          4.9         3.0          1.4         0.2  Iris-setosa\n",
-       "2          4.7         3.2          1.3         0.2  Iris-setosa\n",
-       "3          4.6         3.1          1.5         0.2  Iris-setosa\n",
-       "4          5.0         3.6          1.4         0.2  Iris-setosa"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#--Library\n",
     "# import os\n",
@@ -4437,102 +4325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SepalLength</th>\n",
-       "      <th>SepalWidth</th>\n",
-       "      <th>PetalLength</th>\n",
-       "      <th>PetalWidth</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Target</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   SepalLength  SepalWidth  PetalLength  PetalWidth  Name  Target\n",
-       "0          5.1         3.5          1.4         0.2   0.0     0.0\n",
-       "1          4.9         3.0          1.4         0.2   0.0     0.0\n",
-       "2          4.7         3.2          1.3         0.2   0.0     0.0\n",
-       "3          4.6         3.1          1.5         0.2   0.0     0.0\n",
-       "4          5.0         3.6          1.4         0.2   0.0     0.0"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "##Prepare data\n",
     "\n",
@@ -4569,10 +4364,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 145,
+   "metadata": {},
    "outputs": [],
    "source": [
     "##Model data\n",
@@ -4585,10 +4378,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 146,
+   "metadata": {},
    "outputs": [],
    "source": [
     "##Visualizing the tree\n",
@@ -4617,10 +4408,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 147,
+   "metadata": {},
    "outputs": [],
    "source": [
     "##Predict target\n",
@@ -4630,10 +4419,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 148,
+   "metadata": {},
    "outputs": [],
    "source": [
     "##Check tree accuracy\n",
@@ -4651,21 +4438,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.7.13 |Anaconda custom (64-bit)| (default, Sep 21 2017, 17:38:20) \n",
-      "[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# import sys\n",
-    "# print(sys.version)"
+    "import sys\n",
+    "print(sys.version)"
    ]
   }
  ],
