--- a/09-pandas-data-analysis/Desafio (Parte 2) - Extraindo Informações.ipynb
+++ b/09-pandas-data-analysis/Desafio (Parte 2) - Extraindo Informações.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,16 +118,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rodrigo/anaconda3/lib/python3.6/site-packages/numpy/lib/arraysetops.py:466: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  mask |= (ar1 == a)\n"
+     ]
+    }
+   ],
    "source": [
-    "dataset = pd.read_csv(file_name, sep=\",\", index_col=0, encoding=\"utf-8\")"
+    "dataset = pd.read_csv(file_name,\n",
+    "                      sep=\",\",\n",
+    "                      index_col=0,\n",
+    "                      encoding=\"utf-8\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,9 +153,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>order_dow</th>\n",
+       "      <th>department</th>\n",
+       "      <th>aisle</th>\n",
+       "      <th>product_name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>order_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1187899</th>\n",
+       "      <td>1</td>\n",
+       "      <td>wednesday</td>\n",
+       "      <td>beverages</td>\n",
+       "      <td>soft drinks</td>\n",
+       "      <td>Soda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2757217</th>\n",
+       "      <td>67</td>\n",
+       "      <td>saturday</td>\n",
+       "      <td>beverages</td>\n",
+       "      <td>soft drinks</td>\n",
+       "      <td>Soda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>632715</th>\n",
+       "      <td>676</td>\n",
+       "      <td>saturday</td>\n",
+       "      <td>beverages</td>\n",
+       "      <td>soft drinks</td>\n",
+       "      <td>Soda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1167274</th>\n",
+       "      <td>760</td>\n",
+       "      <td>wednesday</td>\n",
+       "      <td>beverages</td>\n",
+       "      <td>soft drinks</td>\n",
+       "      <td>Soda</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3347074</th>\n",
+       "      <td>804</td>\n",
+       "      <td>tuesday</td>\n",
+       "      <td>beverages</td>\n",
+       "      <td>soft drinks</td>\n",
+       "      <td>Soda</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          user_id  order_dow department        aisle product_name\n",
+       "order_id                                                         \n",
+       "1187899         1  wednesday  beverages  soft drinks         Soda\n",
+       "2757217        67   saturday  beverages  soft drinks         Soda\n",
+       "632715        676   saturday  beverages  soft drinks         Soda\n",
+       "1167274       760  wednesday  beverages  soft drinks         Soda\n",
+       "3347074       804    tuesday  beverages  soft drinks         Soda"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dataset.head()"
    ]
@@ -164,11 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "117221\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\" Entre com o Código aqui \"\"\""
+    "unique_users = dataset['user_id'].nunique()\n",
+    "print(unique_users)"
    ]
   },
   {
@@ -180,11 +297,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Banana    16784\n",
+       "Name: product_name, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"\"\" Entre com o Código aqui \"\"\""
+    "top_products = dataset['product_name'].value_counts()\n",
+    "top_products.head(1)"
    ]
   },
   {
@@ -196,11 +326,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "149753    80\n",
+      "63458     77\n",
+      "83993     76\n",
+      "169647    75\n",
+      "104741    74\n",
+      "31611     74\n",
+      "181991    72\n",
+      "59321     72\n",
+      "82931     70\n",
+      "7430      70\n",
+      "Name: user_id, dtype: int64\n",
+      "136000    1\n",
+      "119608    1\n",
+      "166385    1\n",
+      "91532     1\n",
+      "103216    1\n",
+      "95020     1\n",
+      "122267    1\n",
+      "124316    1\n",
+      "126365    1\n",
+      "174618    1\n",
+      "Name: user_id, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "\"\"\" Entre com o Código aqui \"\"\""
+    "user = dataset['user_id'].value_counts()\n",
+    "print(user.head(10))\n",
+    "print(user.tail(10))"
    ]
   },
   {
@@ -212,11 +373,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>order_dow</th>\n",
+       "      <th>product_qty</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>112108</td>\n",
+       "      <td>wednesday</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>36</td>\n",
+       "      <td>79431</td>\n",
+       "      <td>friday</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>38</td>\n",
+       "      <td>42756</td>\n",
+       "      <td>friday</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>96</td>\n",
+       "      <td>17227</td>\n",
+       "      <td>friday</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>98</td>\n",
+       "      <td>56463</td>\n",
+       "      <td>tuesday</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   order_id  user_id  order_dow  product_qty\n",
+       "0         1   112108  wednesday            8\n",
+       "1        36    79431     friday            8\n",
+       "2        38    42756     friday            9\n",
+       "3        96    17227     friday            7\n",
+       "4        98    56463    tuesday           49"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"\"\" Entre com o Código aqui \"\"\""
+    "groupped_columns = ['order_id','user_id','order_dow']\n",
+    "df = dataset.groupby(groupped_columns)['product_name'].count()\n",
+    "df = df.reset_index()\n",
+    "df.rename(columns={'product_name':'product_qty'},\n",
+    "          inplace=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average:  10.564190716680459\n",
+      "Standard Derivation:  7.945046845800925\n"
+     ]
+    }
+   ],
+   "source": [
+    "product_qty_avg = df['product_qty'].mean()\n",
+    "product_qty_stddev = df['product_qty'].std()\n",
+    "print('Average: ', product_qty_avg)\n",
+    "print('Standard Derivation: ', product_qty_stddev)"
    ]
   },
   {
@@ -228,11 +496,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>department</th>\n",
+       "      <th>aisle_qty</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>alcohol</td>\n",
+       "      <td>5007</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>babies</td>\n",
+       "      <td>13324</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bakery</td>\n",
+       "      <td>43259</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>beverages</td>\n",
+       "      <td>102005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>breakfast</td>\n",
+       "      <td>26456</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  department  aisle_qty\n",
+       "0    alcohol       5007\n",
+       "1     babies      13324\n",
+       "2     bakery      43259\n",
+       "3  beverages     102005\n",
+       "4  breakfast      26456"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\"\"\" Entre com o Código aqui \"\"\""
+    "groupped_columns = ['department']\n",
+    "df2 = dataset.groupby(groupped_columns)['aisle'].count()\n",
+    "df2 = df2.reset_index()\n",
+    "df2.rename(columns={'aisle':'aisle_qty'},\n",
+    "          inplace=True)\n",
+    "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58968.80952380953\n",
+      "32299.0\n",
+      "1218\n",
+      "365640\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df2['aisle_qty'].mean())\n",
+    "print(df2['aisle_qty'].median())\n",
+    "print(df2['aisle_qty'].min())\n",
+    "print(df2['aisle_qty'].max())"
    ]
   },
   {
@@ -248,7 +613,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\" Entre com o Código aqui \"\"\""
+    "groupped_columns = ['department']\n",
+    "df2 = dataset.groupby(groupped_columns)['aisle'].count()\n",
+    "df2 = df2.reset_index()\n",
+    "df2.rename(columns={'aisle':'aisle_qty'},\n",
+    "          inplace=True)\n",
+    "df2.head()"
    ]
   },
   {
