--- a/18-cross-validation-regularization/notebooks/Aula_18 - Cross-validation_Desafio_completar.ipynb
+++ b/18-cross-validation-regularization/notebooks/Aula_18 - Cross-validation_Desafio_completar.ipynb
@@ -24,7 +24,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -264,10 +263,8 @@
    "outputs": [],
    "source": [
     "# Necessary imports: \n",
-    "#from sklearn.cross_validation import cross_val_score, cross_val_predict\n",
-    "from sklearn import metrics\n",
-    "from sklearn.model_selection import cross_val_score, cross_val_predict\n",
-    "from sklearn.model_selection import KFold"
+    "from sklearn.cross_validation import cross_val_score, cross_val_predict\n",
+    "from sklearn import metrics"
    ]
   },
   {
