--- a/21-knn/notebooks/Aula 21- Desafio.ipynb
+++ b/21-knn/notebooks/Aula 21- Desafio.ipynb
@@ -308,9 +308,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (somostera)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "somostera"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
