--- a/23-boosting/notebooks/From DT to Ensemble-Exercicio.ipynb
+++ b/23-boosting/notebooks/From DT to Ensemble-Exercicio.ipynb
@@ -59,24 +59,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -168,7 +170,7 @@
        "4     0   137    40    35   168  43.1  2.288   33      1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.70779220779220775"
+       "0.7077922077922078"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,17 +203,17 @@
     "#Import Library\n",
     "#Import other necessary libraries like pandas, numpy...\n",
     "from sklearn import tree\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split \n",
     "# Create tree object \n",
-    "model = ______________(criterion=__) # use gini or entropy (information gain) by default it is gini  \n",
+    "model = tree.DecisionTreeClassifier(criterion='entropy') # use gini or entropy (information gain) by default it is gini  \n",
     "\n",
     "# Train the model using the training sets and check score\n",
     "array = dataframe.values\n",
     "X = array[:,0:8]\n",
     "y = array[:,8]\n",
-    "X_train,X_test,y_train,y_test = __________(_,_,random_state=7, stratify=y, test_size=___) #use test_size=0.2\n",
-    "model.fit(____, ____)\n",
-    "model.score(____, ___)"
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,random_state=7, stratify=y, test_size=0.2) #use test_size=0.2\n",
+    "model.fit(X_train, y_train)\n",
+    "model.score(X_test, y_test)"
    ]
   },
   {
@@ -273,16 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.77922077922077926"
+       "0.7792207792207793"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,27 +315,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.75974025974025972"
+       "0.7662337662337663"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.ensemble import __________\n",
     "seed = 7\n",
     "##Use 100 trees and 3 as subsample for features\n",
-    "num_trees = ___\n",
-    "max_features = _\n",
-    "model = ______(_____=num_trees, ____=max_features)\n",
+    "num_trees = 100\n",
+    "max_features = 3\n",
+    "model = RandomForestClassifier(n_estimators=num_trees, max_features=max_features, random_state=200)\n",
     "model.fit(X_train, y_train)\n",
     "model.score(X_test, y_test)"
    ]
@@ -406,13 +416,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: tqdm in /home/rodrigo/anaconda3/lib/python3.6/site-packages\n",
+      "\u001b[33mYou are using pip version 9.0.2, however version 9.0.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from tqdm import tqdm\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = 7\n",
+    "num_trees = 50\n",
+    "max_features = 8\n",
+    "max_depth = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.75324675324675328"
+       "0.7662337662337663"
       ]
      },
      "execution_count": 29,
@@ -421,14 +473,200 @@
     }
    ],
    "source": [
-    "from sklearn.ensemble import ____________\n",
-    "\n",
-    "seed = 7\n",
-    "num_trees = 100\n",
-    "max_features = 3\n",
-    "model = __________(n_estimators=num_trees, max_features=max_features)\n",
+    "model = GradientBoostingClassifier(n_estimators=num_trees, max_features=max_features, random_state=90)\n",
     "model.fit(X_train, y_train)\n",
     "model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(768, 8)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2000/2000 [00:34<00:00, 58.35it/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "r_list = []\n",
+    "arr = []\n",
+    "for tree in range(1, num_trees+1):\n",
+    "    for fea in range(1, max_features+1):\n",
+    "        for depth in range(1, max_depth+1):\n",
+    "            arr.append((tree, fea, depth))\n",
+    "            \n",
+    "for tree, fea, depth in tqdm(arr):\n",
+    "    model = GradientBoostingClassifier(n_estimators=tree, max_features=fea,max_depth=depth,random_state=90)\n",
+    "    model.fit(X_train, y_train)\n",
+    "    score = model.score(X_test, y_test)\n",
+    "    r_list.append([\"Tress: {} Features: {}\".format(tree,fea), tree, fea, depth, score])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Version</th>\n",
+       "      <th>num_trees</th>\n",
+       "      <th>max_features</th>\n",
+       "      <th>max_depth</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>516</th>\n",
+       "      <td>Tress: 13 Features: 8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.811688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1195</th>\n",
+       "      <td>Tress: 30 Features: 8</td>\n",
+       "      <td>30</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.811688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1260</th>\n",
+       "      <td>Tress: 32 Features: 5</td>\n",
+       "      <td>32</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.811688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1185</th>\n",
+       "      <td>Tress: 30 Features: 6</td>\n",
+       "      <td>30</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.811688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1190</th>\n",
+       "      <td>Tress: 30 Features: 7</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.811688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>Tress: 5 Features: 4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.642857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Tress: 3 Features: 4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.642857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>286</th>\n",
+       "      <td>Tress: 8 Features: 2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.636364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>326</th>\n",
+       "      <td>Tress: 9 Features: 2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.636364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>366</th>\n",
+       "      <td>Tress: 10 Features: 2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.636364</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Version  num_trees  max_features  max_depth     Score\n",
+       "516   Tress: 13 Features: 8         13             8          2  0.811688\n",
+       "1195  Tress: 30 Features: 8         30             8          1  0.811688\n",
+       "1260  Tress: 32 Features: 5         32             5          1  0.811688\n",
+       "1185  Tress: 30 Features: 6         30             6          1  0.811688\n",
+       "1190  Tress: 30 Features: 7         30             7          1  0.811688\n",
+       "176    Tress: 5 Features: 4          5             4          2  0.642857\n",
+       "98     Tress: 3 Features: 4          3             4          4  0.642857\n",
+       "286    Tress: 8 Features: 2          8             2          2  0.636364\n",
+       "326    Tress: 9 Features: 2          9             2          2  0.636364\n",
+       "366   Tress: 10 Features: 2         10             2          2  0.636364"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_r = pd.DataFrame(r_list, columns=['Version','num_trees','max_features','max_depth','Score'])\n",
+    "df_r = df_r.sort_values(by=['Score'], ascending=False)\n",
+    "pd.concat([df_r.head(),df_r.tail()])\n"
    ]
   },
   {
@@ -441,9 +679,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (somostera)",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "somostera"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -455,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
