--- a/21-knn/notebooks/Aula 21- kNN Conceitos Regressão.ipynb
+++ b/21-knn/notebooks/Aula 21- kNN Conceitos Regressão.ipynb
@@ -293,7 +293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
