--- a/19-logistic-regression/notebooks/Exemplo_Aula_19- Algoritmos_Classificacao_ Reg_logistica.ipynb
+++ b/19-logistic-regression/notebooks/Exemplo_Aula_19- Algoritmos_Classificacao_ Reg_logistica.ipynb
@@ -3206,7 +3206,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
