--- a/27-nlp/notebooks/Aula Fundamentos NLP-Alunos.ipynb
+++ b/27-nlp/notebooks/Aula Fundamentos NLP-Alunos.ipynb
@@ -4417,9 +4417,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (somostera)",
+   "display_name": "Python [conda env:tera-fev2018]",
    "language": "python",
-   "name": "somostera"
+   "name": "conda-env-tera-fev2018-py"
   },
   "language_info": {
    "codemirror_mode": {
